# trimwise

./: .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  configuration-and-api.md  getting-started.md  guarantees-and-limitations.md  hooks.py  how-it-works.md  index.md  requirements.txt  research-foundations.md  semantic-and-async.md  strategies.md
docs-overrides/templates/: copy_button.html  extra_head.html  seo.html
docs/javascripts/: llm-page-actions.js
docs/stylesheets/: extra.css
src/trimwise/: __init__.py  measurement.py  models.py  ranking.py  segmentation.py  semantic.py  trimmer.py
tests/: test_api.py  test_async_semantic.py  test_docstrings.py  test_ranking.py  test_segmentation.py
tests/integration/: test_fastembed.py
