[build-system]
requires = ["flit_core>=3.11,<5"]
build-backend = "flit_core.buildapi"

[project]
name = "trimwise"
version = "0.1.0"
description = "High-signal text trimming for better LLM prompts."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Aakash"}]
keywords = ["llm", "truncation", "context", "bm25", "embeddings"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
dependencies = [
    "markdown-it-py>=4.2,<5",
    "numpy>=1.26,<3",
    "tiktoken>=0.13,<1",
]

[project.optional-dependencies]
semantic = ["fastembed>=0.8,<1"]
semantic-gpu = ["fastembed-gpu>=0.8,<1"]
dev = [
    "build>=1.5,<2",
    "mypy>=2.3,<3",
    "pytest>=9.1,<10",
    "pytest-asyncio>=1.4,<2",
    "pytest-cov>=7.1,<8",
    "ruff>=0.15.21,<1",
]

[project.urls]
Source = "https://github.com/tenwritehq/trimwise"
Issues = "https://github.com/tenwritehq/trimwise/issues"

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers --cov=trimwise --cov-branch --cov-report=term-missing --cov-fail-under=95"
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["integration: downloads and exercises the real FastEmbed model"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["ANN", "ASYNC", "B", "C4", "D", "E", "F", "I", "PIE", "RUF", "SIM", "UP"]
ignore = ["ANN401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
